--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,20 @@ dependencies {
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    // FirebaseUI for Cloud Firestore
+    implementation 'com.firebaseui:firebase-ui-firestore:7.2.0'
+
+
+    //glide
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
+    implementation 'com.google.firebase:firebase-storage:20.0.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
+
+    //image picker
+    implementation 'com.github.dhaval2404:imagepicker:2.1'
+
+
+
     implementation 'com.google.firebase:firebase-auth-ktx:21.0.1'
     implementation platform('com.google.firebase:firebase-bom:28.2.1')
     implementation 'com.google.firebase:firebase-firestore-ktx:23.0.2'
