--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,10 +6,11 @@
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
-        android:label="PeekPoke"
+        android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.PeekPoke">
+
         <activity android:name=".CreatePostActivity"></activity>
         <activity android:name=".auth.AuthenticationActivity"></activity>
         <activity android:name=".MainActivity">
